# puraltech

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
config/: settings.py  urls.py
core/: forms.py  validators.py  views.py
static/css/: cookieconsent.css  styles.css
static/js/: cookieconsent-config.js  cookieconsent-config.min.js  form-validation-contact.js  form-validation-contact.min.js  main.js  main.min.js
templates/: about.html  base.html  contact.html  contact_email.html  contact_user_email.html  contact_user_email.txt  home.html  info.html  services.html
users/migrations/: 0001_initial.py
